--- a/interview.html
+++ b/interview.html
@@ -156,7 +156,11 @@ From my observation of the social circle of the second generation of immigrants,
                                 <div class="clear"></div>
 
                                 <div class="one center-text" >
-                                  <img src="demo-images/interview1.png" alt=""><br>
+                                  <img src="demo-images/interview1.jpeg" alt=""><br>
+                                </div>
+                                  
+                                      <div class="one center-text" >
+                                  <img src="demo-images/interview2.jpeg" alt=""><br>
                                 </div>
 
 
