--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <article>
                     <div class="content-1330 center-relative ">
                       <div class="page-desc re-desc" style="">
-                        <strong>  My name is Chuhan Wu, I'm a highly passionate interactive designer and media practicor. During my undergraduate in UCSD (University of San Diego), I double majored in Communication and Interdisciplinary Computing & Arts. I'm actively applying for a master project to enrich my knowledge and skills. </strong>
+                        <strong>  My name is Chuhan Wu, I'm a highly passionate interactive designer and media practicor. I am graduating after my third year of attending University of California San Diego and double majored in Interdisciplinary computing and the art major, which trains my abilities of manipulating all these fancy technologies such as VR, Creative coding, interactive design, along with Communication, a major focuses a lot on how to efficiently and effectively spread out ideas. I'm actively applying for a master project to enrich my knowledge and skills. </strong>
                       </div>
                         <div class="clear"></div>
                         <p>&nbsp;</p>
