--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
                                 <a href="#">RESUME</a>
                                 <ul class="sub-menu">
                                     <li>
-                                        <a href="images/resume-IxM.pdf">Design</a>
+                                        <a href="images/resume-IxM-final.pdf">Design</a>
                                     </li>
                                     <li>
-                                        <a href="images/resume-Journalism.pdf">Media & Journalism</a>
+                                        <a href="images/resume-Journalism-final.pdf">Media & Journalism</a>
                                     </li>
 
                                 </ul>
