--- a/hbd.html
+++ b/hbd.html
@@ -98,13 +98,13 @@
 
               <div class="page-desc">
                 <strong>Human Evalution System</strong><br>
-                <i>When enters the 26th century, human society is centrally controlled by one political power which completely materialized human beings in the name of promoting social development. Throughout the processes of labeling individual citizen with barcode and evaluating the organs, central government tightly servile people’s daily behavior and their body condition.</i><br>
-                <br />
+                When enters the 26th century, human society is centrally controlled by one political power which completely materialized human beings in the name of promoting social development. Throughout the processes of labeling individual citizen with barcode and evaluating the organs, central government tightly servile people’s daily behavior and their body condition.<br>
+
                 <a href="https://github.com/chuhan-wu/humanEvalutionSystem">[View my code on Github]</a>
               </div>
               <div class="clear"></div>
               <p>&nbsp;</p>
-              <p>&nbsp;</p>
+        
 
 
                 <article>
