--- a/interview.html
+++ b/interview.html
@@ -98,12 +98,12 @@
 
               <div class="page-desc">
                 <strong>Lilac‘s Studio- Interview with 2nd Generation of Immigrants </strong><br>
-                <i>   The interview with Catherine Qiu intends to compare and contrast the cultural difference as well as discover the internal identity connection between the second generation of immigrants and native American citizens around them.   </i><br>
+                 The interview with Catherine Qiu intends to compare and contrast the cultural difference as well as discover the internal identity connection between the second generation of immigrants and native American citizens around them. <br>
 
               </div>
               <div class="clear"></div>
               <p>&nbsp;</p>
-              <p>&nbsp;</p>
+         
 
 
                 <article>
