--- a/ln.html
+++ b/ln.html
@@ -98,13 +98,13 @@
 
               <div class="page-desc">
                 <strong>Life Navigator</strong><br>
-                <i>Each individual’s life should be fully controlled by himself or herself, whereas wandering around other’s suggestions and experiences will end up with completely lost. </i><br>
-                <br />
+               Each individual’s life should be fully controlled by himself or herself, whereas wandering around other’s suggestions and experiences will end up with completely lost. <br>
+                
                 <a href="https://github.com/chuhan-wu/lifeNavigator">[View my code on Github]</a>
               </div>
               <div class="clear"></div>
               <p>&nbsp;</p>
-              <p>&nbsp;</p>
+         
 
 
                 <article>
