--- a/proudVR.html
+++ b/proudVR.html
@@ -98,12 +98,12 @@
 
               <div class="page-desc">
                 <strong>Proud - You Will See Rainbow After Rain</strong><br>
-                <i>    In the past few weeks, there was a new policy being applied in Chinese social media such as Weibo(Blog), Chinese Twitter, and WeChat, that all words that have the connection to LGBTQ will be blocked automatically and the comment area was even closed for users. People are shocked by the new policy and turned into a great protest and speak for LGBTQ in not only Mainland China, but also all over the world.  </i><br>
+                 In the past few weeks, there was a new policy being applied in Chinese social media such as Weibo(Blog), Chinese Twitter, and WeChat, that all words that have the connection to LGBTQ will be blocked automatically and the comment area was even closed for users. People are shocked by the new policy and turned into a great protest and speak for LGBTQ in not only Mainland China, but also all over the world. <br>
 
               </div>
               <div class="clear"></div>
               <p>&nbsp;</p>
-              <p>&nbsp;</p>
+            
 
 
                 <article>
