--- a/split.html
+++ b/split.html
@@ -98,12 +98,12 @@
 
               <div class="page-desc">
                 <strong>Split </strong><br>
-                <i> Double exposure photographic experiement to exlore identity   </i><br>
+                Double exposure photographic experiement to exlore identity. <br>
 
               </div>
               <div class="clear"></div>
               <p>&nbsp;</p>
-              <p>&nbsp;</p>
+    
 
 
                 <article>
