--- a/wycm.html
+++ b/wycm.html
@@ -98,13 +98,13 @@
 
               <div class="page-desc">
                 <strong>Will You Call Me?</strong><br>
-                <i>High speed life style makes people being used to absorbing all kinds of information quickly and shallowly and then lasting an incomprehensive impression to people or the object they just viewed. A lot of people ignore the meaning of the object and purely focus its exterior. However, the value of an object lies in its meaning and the process of creation except for its appearance. </i><br>
+               High speed life style makes people being used to absorbing all kinds of information quickly and shallowly and then lasting an incomprehensive impression to people or the object they just viewed. A lot of people ignore the meaning of the object and purely focus its exterior. However, the value of an object lies in its meaning and the process of creation except for its appearance. <br>
                 <br />
                 <a href="https://github.com/chuhan-wu/willYouCallMe">[View my code on Github]</a>
               </div>
               <div class="clear"></div>
               <p>&nbsp;</p>
-              <p>&nbsp;</p>
+    
 
 
                 <article>
