--- a/proudVR.html
+++ b/proudVR.html
@@ -160,6 +160,10 @@ I always believe that people who are LGBTQ have more kindness compare to rest of
                                 <div class="one center-text" >
                                   <img src="demo-images/pvr1.jpeg" alt=""><br>
                                 </div>
+                                  
+                                  <div class="one center-text" >
+                                  <img src="demo-images/pvr2.jpeg" alt=""><br>
+                                </div>
 
 
                                 <div class="clear"></div>
