--- a/proudVR.html
+++ b/proudVR.html
@@ -162,7 +162,7 @@ I always believe that people who are LGBTQ have more kindness compare to rest of
                                 </div>
                                   
                                   <div class="one center-text" >
-                                  <img src="demo-images/pvr2.jpeg" alt=""><br>
+                                  <img src="demo-images/pvr2.jpg" alt=""><br>
                                 </div>
 
 
