--- a/ln.html
+++ b/ln.html
@@ -174,6 +174,10 @@ Many types of media are passionate about producing inspirational programs, which
                                 <div class="one center-text">
                                     <img src="demo-images/ln2.jpg" alt=""><br>
                                 </div>
+                                  
+                                   <div class="one center-text">
+                                    <img src="demo-images/ln-poster.jpg" alt=""><br>
+                                </div>
                                 <div class="clear"></div>
                                 <p>&nbsp;</p>
                                 <p>&nbsp;</p>
