--- a/wycm.html
+++ b/wycm.html
@@ -174,6 +174,10 @@ I am willing to arouse people with similar situation to start slowing down their
                                 <div class="one center-text">
                                     <img src="demo-images/wycm2.png" alt=""><br>
                                 </div>
+                                  
+                                   <div class="one center-text">
+                                    <img src="demo-images/wycm-poster.jpg" alt=""><br>
+                                </div>
                                 <div class="clear"></div>
                                 <p>&nbsp;</p>
                                 <p>&nbsp;</p>
