--- a/index.html
+++ b/index.html
@@ -112,23 +112,6 @@
                         </div>
                         <div class="grid" id="portfolio">
                             <div class="grid-sizer"></div>
-                            <div class="grid-item element-item p_one_third installation">
-                                <a href="hbd.html">
-                                    <img src="demo-images/sun_portfolio_image11.jpg" alt="">
-                                    <div class="portfolio-text-holder">
-                                        <p>Human Evalution System</p>
-                                    </div>
-                                </a>
-                            </div>
-
-                            <div class="grid-item element-item p_one_third installation">
-                                <a href="mc.html">
-                                    <img src="demo-images/sun_portfolio_image10.jpg" alt="">
-                                    <div class="portfolio-text-holder">
-                                        <p>Magic Cube</p>
-                                    </div>
-                                </a>
-                            </div>
                             <div class="grid-item element-item p_one_third visual installation">
                                 <a href="wycm.html">
                                     <img src="demo-images/sun_portfolio_image04.jpg" alt="">
@@ -137,33 +120,29 @@
                                     </div>
                                 </a>
                             </div>
+                            <div class="grid-item element-item p_one_third installation">
+                                <a href="hbd.html">
+                                    <img src="demo-images/sun_portfolio_image01.jpg" alt="">
+                                    <div class="portfolio-text-holder">
+                                        <p>Human Evalution System</p>
+                                    </div>
+                                </a>
+                            </div>
+
+                            <div class="grid-item element-item p_one_third installation">
+                                <a href="mc.html">
+                                    <img src="demo-images/sun_portfolio_image11.jpg" alt="">
+                                    <div class="portfolio-text-holder">
+                                        <p>Magic Cube</p>
+                                    </div>
+                                </a>
+                            </div>
+
                             <div class="grid-item element-item p_one_third visual">
                                 <a href="ln.html">
                                     <img src="demo-images/sun_portfolio_image07.jpg" alt="">
                                     <div class="portfolio-text-holder">
                                         <p>Life Navigator</p>
-                                    </div>
-                                </a>
-                            </div>
-
-
-
-
-
-                            <div class="grid-item element-item p_one_third installation">
-                                <a href="tree.html">
-                                    <img src="demo-images/sun_portfolio_image03.jpg" alt="">
-                                    <div class="portfolio-text-holder">
-                                        <p>Tree</p>
-                                    </div>
-                                </a>
-                            </div>
-
-                            <div class="grid-item element-item p_one_third visual">
-                                <a href="music.html">
-                                    <img src="demo-images/sun_portfolio_image05.jpg" alt="">
-                                    <div class="portfolio-text-holder">
-                                        <p>Music Works</p>
                                     </div>
                                 </a>
                             </div>
@@ -175,6 +154,16 @@
                                     </div>
                                 </a>
                             </div>
+
+                            <div class="grid-item element-item p_one_third installation">
+                                <a href="tree.html">
+                                    <img src="demo-images/sun_portfolio_image03.jpg" alt="">
+                                    <div class="portfolio-text-holder">
+                                        <p>Dreaming Tree</p>
+                                    </div>
+                                </a>
+                            </div>
+
                             <div class="grid-item element-item p_one_third installation">
                                 <a href="proudVR.html">
                                     <img src="demo-images/sun_portfolio_image09.jpg" alt="">
@@ -183,6 +172,17 @@
                                     </div>
                                 </a>
                             </div>
+                            
+                            <div class="grid-item element-item p_one_third visual">
+                                <a href="music.html">
+                                    <img src="demo-images/sun_portfolio_image05.jpg" alt="">
+                                    <div class="portfolio-text-holder">
+                                        <p>Music Works</p>
+                                    </div>
+                                </a>
+                            </div>
+
+
 
 
                             <div class="grid-item element-item p_one_third music">
