--- a/portfolio.html
+++ b/portfolio.html
@@ -1,6 +1,15 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
     <head>
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-130570399-1"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+      
+        gtag('config', 'UA-130570399-1');
+      </script>
       <title>Chuhan Wu - Interactive Art Portfolio</title>
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <meta name="description" content="Template by Dry Themes" />
@@ -111,88 +120,88 @@
                       </div>
                       <div class="grid" id="portfolio">
                           <div class="grid-sizer"></div>
-                          <div class="grid-item element-item p_one_third installation">
-                              <a href="hbd.html">
-                                  <img src="demo-images/sun_portfolio_image11.jpg" alt="">
-                                  <div class="portfolio-text-holder">
-                                      <p>Human Evalution System</p>
-                                  </div>
-                              </a>
-                          </div>
+                         <div class="grid-item element-item p_one_third visual installation">
+                                <a href="wycm.html">
+                                    <img src="demo-images/sun_portfolio_image04.jpg" alt="">
+                                    <div class="portfolio-text-holder">
+                                        <p>Will You Call Me?</p>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="grid-item element-item p_one_third installation">
+                                <a href="hbd.html">
+                                    <img src="demo-images/sun_portfolio_image11.jpg" alt="">
+                                    <div class="portfolio-text-holder">
+                                        <p>Human Evalution System</p>
+                                    </div>
+                                </a>
+                            </div>
 
-                          <div class="grid-item element-item p_one_third installation">
-                              <a href="mc.html">
-                                  <img src="demo-images/sun_portfolio_image10.jpg" alt="">
-                                  <div class="portfolio-text-holder">
-                                      <p>Magic Cube</p>
-                                  </div>
-                              </a>
-                          </div>
-                          <div class="grid-item element-item p_one_third visual installation">
-                              <a href="wycm.html">
-                                  <img src="demo-images/sun_portfolio_image04.jpg" alt="">
-                                  <div class="portfolio-text-holder">
-                                      <p>Will You Call Me?</p>
-                                  </div>
-                              </a>
-                          </div>
-                          <div class="grid-item element-item p_one_third visual">
-                              <a href="ln.html">
-                                  <img src="demo-images/sun_portfolio_image07.jpg" alt="">
-                                  <div class="portfolio-text-holder">
-                                      <p>Life Navigator</p>
-                                  </div>
-                              </a>
-                          </div>
+                            <div class="grid-item element-item p_one_third installation">
+                                <a href="mc.html">
+                                    <img src="demo-images/sun_portfolio_image10.jpg" alt="">
+                                    <div class="portfolio-text-holder">
+                                        <p>Magic Cube</p>
+                                    </div>
+                                </a>
+                            </div>
 
+                            <div class="grid-item element-item p_one_third visual">
+                                <a href="ln.html">
+                                    <img src="demo-images/sun_portfolio_image07.jpg" alt="">
+                                    <div class="portfolio-text-holder">
+                                        <p>Life Navigator</p>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="grid-item element-item p_one_third visual">
+                                <a href="interview.html">
+                                    <img src="demo-images/sun_portfolio_image02.jpg" alt="">
+                                    <div class="portfolio-text-holder">
+                                        <p>Lilac‘s Studio- Interview</p>
+                                    </div>
+                                </a>
+                            </div>
 
+                            <div class="grid-item element-item p_one_third installation">
+                                <a href="tree.html">
+                                    <img src="demo-images/sun_portfolio_image03.jpg" alt="">
+                                    <div class="portfolio-text-holder">
+                                        <p>Dreaming Tree</p>
+                                    </div>
+                                </a>
+                            </div>
 
-
-
-                          <div class="grid-item element-item p_one_third installation">
-                              <a href="tree.html">
-                                  <img src="demo-images/sun_portfolio_image03.jpg" alt="">
-                                  <div class="portfolio-text-holder">
-                                      <p>Tree</p>
-                                  </div>
-                              </a>
-                          </div>
-
-                          <div class="grid-item element-item p_one_third visual">
-                              <a href="music.html">
-                                  <img src="demo-images/sun_portfolio_image05.jpg" alt="">
-                                  <div class="portfolio-text-holder">
-                                      <p>Music Works</p>
-                                  </div>
-                              </a>
-                          </div>
-                          <div class="grid-item element-item p_one_third visual">
-                              <a href="interview.html">
-                                  <img src="demo-images/sun_portfolio_image02.jpg" alt="">
-                                  <div class="portfolio-text-holder">
-                                      <p>Lilac‘s Studio- Interview</p>
-                                  </div>
-                              </a>
-                          </div>
-                          <div class="grid-item element-item p_one_third installation">
-                              <a href="proudVR.html">
-                                  <img src="demo-images/sun_portfolio_image09.jpg" alt="">
-                                  <div class="portfolio-text-holder">
-                                      <p>Proud VR</p>
-                                  </div>
-                              </a>
-                          </div>
+                            <div class="grid-item element-item p_one_third installation">
+                                <a href="proudVR.html">
+                                    <img src="demo-images/sun_portfolio_image09.jpg" alt="">
+                                    <div class="portfolio-text-holder">
+                                        <p>Proud VR</p>
+                                    </div>
+                                </a>
+                            </div>
+                            
+                            <div class="grid-item element-item p_one_third visual">
+                                <a href="music.html">
+                                    <img src="demo-images/sun_portfolio_image05.jpg" alt="">
+                                    <div class="portfolio-text-holder">
+                                        <p>Music Works</p>
+                                    </div>
+                                </a>
+                            </div>
 
 
-                          <div class="grid-item element-item p_one_third music">
-                              <a href="split.html">
-                                  <img src="demo-images/sun_portfolio_image08.jpg" alt="">
-                                  <div class="portfolio-text-holder">
-                                      <p>Split - Double exposure</p>
-                                  </div>
-                              </a>
-                          </div>
-                      </div>
+
+
+                            <div class="grid-item element-item p_one_third music">
+                                <a href="split.html">
+                                    <img src="demo-images/sun_portfolio_image08.jpg" alt="">
+                                    <div class="portfolio-text-holder">
+                                        <p>Split - Double exposure</p>
+                                    </div>
+                                </a>
+                            </div>
+</div>
                       <div class="clear"></div>
 
 
