--- a/portfolio.html
+++ b/portfolio.html
@@ -105,8 +105,8 @@
           <div id="content" class="site-content">
               <article>
                   <div class="content-1330 center-relative">
-                      <div class="page-desc re-desc" style="">
-                        <strong>  My name is Chuhan Wu, I'm a highly passionate interactive designer and media practicor. I am graduating after my third year of attending University of California San Diego and double majored in Interdisciplinary computing and the art major, which trains my abilities of manipulating all these fancy technologies such as VR, Creative coding, interactive design, along with Communication, a major focuses a lot on how to efficiently and effectively spread out ideas. I'm actively applying for a master project to enrich my knowledge and skills. </strong>
+                       <div class="center-relative re-desc" style="">  <!--1201 change float re-desc -->
+                        <strong>  My name is Chuhan Wu, I'm a highly passionate interactive designer and media practicor. I am graduating after my third year of attending University of California San Diego and double majored in Interdisciplinary computing and the art major, which trains my abilities of manipulating all these fancy technologies such as VR, Creative coding, interactive design, along with Communication, a major focuses a lot on how to efficiently and effectively spread out ideas. I'm actively applying for a master project to enrich my knowledge and skills. </strong>  <!--1201 change font -->
                       </div>
                       <div class="clear"></div>
                       <p>&nbsp;</p>
