--- a/wycm.html
+++ b/wycm.html
@@ -109,9 +109,9 @@
                 <h1><strong>Will You Call Me?</strong></h1>
                <h6>Medium: Arduino, C++, Telephone receivers </h6>
 
-               <div class="three_fourth description">
+               <div class="three_fourth description" style="float:right;">
                 The high speed life style makes people be used to absorbing all kinds of information quickly and shallowly and then lasting an incomprehensive impression to people or the object they just viewed. A lot of people ignore the meaning of the object and purely focus its exterior. However, the value of an object lies in its meaning and the process of creation except for its appearance. By participating in this project, audience will be resonated by the recordings of phone call I collected from the real society that they may never pay attention to, and understand the importance of abandoning snap-judgement of others and respect each individual’s personal background.
-<p>&nbsp</p>
+
  <p> <a href="https://github.com/chuhan-wu/willYouCallMe"> <strong>[View my code on Github]</strong>
    </a></p>
 
