--- a/interview.html
+++ b/interview.html
@@ -1,6 +1,15 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
       <head>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-130570399-1"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-130570399-1');
+        </script>
           <title>Chuhan Wu - Interactive Art Portfolio</title>
           <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
           <meta name="description" content="Template by Dry Themes" />
@@ -74,10 +83,10 @@
                                 <a href="#">RESUME</a>
                                 <ul class="sub-menu">
                                     <li>
-                                        <a href="images/resume-IxM-final.pdf">Design</a>
+                                        <a href="images/resume-IxM.pdf">Design</a>
                                     </li>
                                     <li>
-                                        <a href="images/resume-Journalism-final.pdf">Media & Journalism</a>
+                                        <a href="images/resume-Journalism.pdf">Media & Journalism</a>
                                     </li>
 
                                 </ul>
@@ -97,13 +106,19 @@
             <div id="content" class="site-content content-1330 center-relative">
 
               <div class="page-desc">
-                <strong>Lilac‘s Studio- Interview with 2nd Generation of Immigrants </strong><br>
-                 The interview with Catherine Qiu intends to compare and contrast the cultural difference as well as discover the internal identity connection between the second generation of immigrants and native American citizens around them. <br>
+
+                <h1><strong>Lilac‘s Studio- Interview with 2nd Generation of Immigrants</strong></h1>
+               <h6>Medium: Ableton Live</h6>
+
+               <div class="three_fourth description" style="float:right;">
+            The interview with Catherine Qiu, who is a representative of the second generation of immigrants who has had a hard time to adapt into neither American society or Chinese society. I intended to compare and contrast the cultural difference as well as discover the internal identity connection between the second generation of immigrants and native American citizens around them. During my process of observing facts, analyzing into an ethnography, preparing unbiased questions, interviewing the representative, and editing the recording into the podcast, I separated my idea of prohibiting snap-judgement on people’s identity and introduced people the life dilemma of the second generation of immigrants.
+
+
+               </div>
 
               </div>
               <div class="clear"></div>
-              <p>&nbsp;</p>
-         
+
 
 
                 <article>
@@ -155,13 +170,18 @@ From my observation of the social circle of the second generation of immigrants,
 
                                 <div class="clear"></div>
 
-                                <div class="one center-text" >
+                                <div class="one_half" >
                                   <img src="demo-images/interview1.jpeg" alt=""><br>
                                 </div>
-                                  
-                                      <div class="one center-text" >
-                                  <img src="demo-images/interview2.jpeg" alt=""><br>
+
+                                <div class="one_half last">
+                                    <img src="demo-images/interview2.jpeg" alt=""><br>
                                 </div>
+
+
+
+
+
 
 
                                 <div class="clear"></div>
