--- a/tree.html
+++ b/tree.html
@@ -1,6 +1,15 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
       <head>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-130570399-1"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-130570399-1');
+        </script>
           <title>Chuhan Wu - Interactive Art Portfolio</title>
           <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
           <meta name="description" content="Template by Dry Themes" />
@@ -97,14 +106,18 @@
             <div id="content" class="site-content content-1330 center-relative">
 
               <div class="page-desc">
-                <strong>Tree (Group Project)</strong><br>
-                Under the big stress of upcoming finals, students in UCSD lose their energy and feel over-pressured. Especially in Geisel Library, a place of serious atmosphere, students forget the feeling of natural environment and need to refresh their brain with pleasurable experience from senses of hearing, sight, smell, and touch. <br>
-            
-                <a href="https://github.com/chuhan-wu/tree">[View my code on Github]</a>
+
+                <h1><strong>Dreaming Tree</strong></h1>
+               <h6>Medium: Arduino (Java), LED Light, Adobe After Effect (Collaboration Project)</h6>
+
+               <div class="three_fourth description" style="float:right;">
+                Dreaming Tree is an interactive project combines both video projection and physical connection to imitate outdoor experience in forest for our audience. It demonstrates a scene of a wish tree which allows people to hang their wish card on its branches and accomplished people’s wish by replying sentence with falling petals. It is a digital visualization of wishing tree of traditional sense.
+                <p> <a href="https://github.com/chuhan-wu/tree"><strong>[View my code on Github]</strong></a></p>
+
               </div>
               <div class="clear"></div>
-              <p>&nbsp;</p>
-   
+
+
 
 
                 <article>
@@ -128,42 +141,51 @@
                                 <div class="one_half">
                                     <strong>Background: </strong><br>
                                     <p>
-Dreaming Tree is a interactive project combines both video projection and physical connection to imitate outdoor experience in forest for our audience. It demonstrates a scene of a wish tree which allows people to hang their wish card on its branches and accomplished people’s wish by replying sentence with falling petals. Dreaming Tree was inspired by Flower Dance, a projection map of TeamLab, a Japanese team who focuses on interactive media project. During the process of creating Dreaming tree, we include a self-created animation of flower blooming and leaves moving to imitate natural environment.                </p>
+                                      Dreaming Tree was inspired by Flower Dance, a projection map of TeamLab, a Japanese team who focuses on interactive media project. During the process of creating Dreaming tree, we included a self-created animation of flower blooming and left moving to imitate natural environment.
+
+                                      Instead of using sensor to trigger animation after it capturing shadow and light, we connected the video to an actual step pad, which allows users to step on it to trigger the animation so they can physically experience the movements of making a wish.
+                </p>
                                 </div>
 
                                 <div class="one_half last">
                                     <p>&nbsp;</p>
                                     <p>
- Instead of using sensor to trigger animation after it capturing shadow and light, we connect the video to an actual step pad, which allows user to step on it to trigger the animation so they can physically experience the movements of making a wish. Dreaming Tree includes a 3D hand-making tree in white color to allow projector to project more layers of animation on it (sense of sight); a computer that control the system of triggering the animation by step on the pad (sense of touch); a diffuser to separate the smell of cherry blossom (sense of smell); different songs in steps of making a wish and wish comes true(sense of hearing); and the traditional wish card to arouse the actual feeling of making a wish.
+Dreaming Tree includes a 3D hand-making tree in white color to allow projector to project more layers of animation on it (sense of sight); a computer that control the system of triggering the animation by step on the pad (sense of touch); a diffuser to separate the smell of cherry blossom (sense of smell); different songs in steps of making a wish and wish comes true(sense of hearing); and the traditional wish card to arouse the actual feeling of making a wish.
 </p>
                                 </div>
 
                                 <div class="one_half">
                                   <strong>Description:</strong><br>
                                     <p>
-During the process of making a 3D tree, we firstly designed the model of its length and range. We use all white paper to make the tree because according to Emily’s lecture, projection map will be more clear and in high saturability. After we  purchased a huge roll of white paper, we cut it into large pieces and rub them in order to have the texture of actual tree body. <br> Then we cut the rest of white paper into small leaves, and stick each one on to the wire to imitate tree branches. The finished tree is assembled in the actual exhibit room in Geisel after we transport all elements separately to maintain it unbroken. By using a 3D tree, audience may observe more layers of projection with shadows and sense of distance. Also, using an actual tree will more close to the traditional way of making a wish in people’s memory. By having it stand in the middle of the room, people may actually hang their wish card on its branches to make their wishes.  <br> For the visual interactive part, we needed two animation fit into the physical tree. First one is an ordinary tree with green leaves, and second one is the tree with blooming flowers in accordance with people making a wish. The overall animation is made by Adobe After Effect and we thought this would be the best tool to use. In the first animation, only the leaves on the tree are gently trembling to create a calm atmosphere before making a wish and we gave animation to each 3~4 leaves to show vividness.
+                                      During the process of making a 3D tree, we firstly designed the model of its length and range. We used all white paper to make the tree because according to Emily’s lecture, projection map will be clearer and in high saturation. After we purchased a huge roll of white paper, we cut it into large pieces and rub them in order to have the texture of actual tree body. Then we cut the rest of white paper into small leaves, and stick each one on to the wire to imitate tree branches. The finished tree is assembled in the actual exhibit room in Geisel after we transported all elements separately to maintain it unbroken. By using a 3D tree, audience may observe more layers of projection with shadows and sense of distance. Also, using an actual tree will closer to the traditional way of making a wish in people’s memory. By having it stand in the middle of the room, people may actually hang their wish card on its branches to make their wishes. <br />
+
+                                      For the visual interactive part, we needed two animation fit into the physical tree. First one is an ordinary tree with green leaves, and second one is the tree with blooming flowers in accordance with people making a wish. The overall animation is made by Adobe After Effect and we thought this would be the best tool to use. In the first animation, only the leaves on the tree are gently trembling to create a calm atmosphere before making a wish and we gave animation to each 3~4 leaves to show vividness.  <br>
+
+
+
                                     </p>
                                 </div>
 
                                 <div class="one_half last">
                                     <p>&nbsp;</p>
                                     <p>
-  Then, the second animation, which shows up when a person steps on the pad, has a little special animation.
-  Light pink flowers are blooming on the tree and many petals are fluttering to show viewers’ wishes are coming true.  At first, the second animation was brighter and more complicated. We had composed the falling flowers that had pink background with first animation, so the second animation had bright pink background. Also, blossoming flowers were not growing from the branches. They were just fixed on the branches without any scale changes. <br> As a result, it looked so weird when the first animation moved on second animation. Therefore, after gathering some ideas from group members, We kept changing the tree animation. And the result was a lot better than the first one. We removed the bright background, and changed the scale of blooming flowers so that it seems like blossoming. The tree image and leaves are made using Adobe Illustration, and the original videos of composite blossoming flowers and fluttering petals are from Pixabay. <br> In the After Effect, we created mask of one flower and changed the mask shape in each key frame. After done the animation of one flower, we changed the color, duplicated several flowers, and put the each flowers on diverse points of branches. Same tasks were applied to the falling flowers.                         </p>
+                                      The second animation, which shows up when a person steps on the pad, has a little special animation. Light pink flowers are blooming on the tree and many petals are fluttering to show viewers’ wishes are coming true. At first, the second animation was brighter and more complicated. We had composed the falling flowers that had pink background with first animation, so the second animation had bright pink background. Also, blossoming flowers were not growing from the branches. They were just fixed on the branches without any scale changes. As a result, it looked so weird when the first animation moved on second animation. Therefore, after gathering some ideas from group members, we kept changing the tree animation. And the result was a lot better than the first one. We removed the bright background, and changed the scale of blooming flowers so that it seems like blossoming. The tree image and leaves are made using Adobe Illustration, and the original videos of composite blossoming flowers and fluttering petals are from Pixabay.  <br />
+
+                                      In the After Effect, we created mask of one flower and changed the mask shape in each key frame. After done the animation of one flower, we changed the color, duplicated several flowers, and put each flower on diverse points of branches. Same tasks were applied to the falling flowers.                  </p>
                                 </div>
 
 
 
 
                                 <div class="clear"></div>
-
-                                <div class="one center-text" >
+                                <div class="one_half" >
                                   <img src="demo-images/tree1.png" alt=""><br>
                                 </div>
 
-                                <div class="one center-text">
+                                <div class="one_half last">
                                     <img src="demo-images/tree2.png" alt=""><br>
                                 </div>
+                              
                                 <div class="clear"></div>
                                 <p>&nbsp;</p>
                                 <p>&nbsp;</p>
