--- a/tree.html
+++ b/tree.html
@@ -174,7 +174,15 @@ Dreaming Tree includes a 3D hand-making tree in white color to allow projector t
                                       In the After Effect, we created mask of one flower and changed the mask shape in each key frame. After done the animation of one flower, we changed the color, duplicated several flowers, and put each flower on diverse points of branches. Same tasks were applied to the falling flowers.                  </p>
                                 </div>
 
+                                <div class="one_half">
+                                  <strong>Work Cited: </strong><br>
+                                    <p>
+                                    <a href="https://borderless.teamlab.art/">https://borderless.teamlab.art/</a>
 
+
+
+                                    </p>
+                                </div>
 
 
                                 <div class="clear"></div>
@@ -185,7 +193,7 @@ Dreaming Tree includes a 3D hand-making tree in white color to allow projector t
                                 <div class="one_half last">
                                     <img src="demo-images/tree2.png" alt=""><br>
                                 </div>
-                              
+
                                 <div class="clear"></div>
                                 <p>&nbsp;</p>
                                 <p>&nbsp;</p>
