--- a/music.html
+++ b/music.html
@@ -1,6 +1,15 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
       <head>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-130570399-1"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-130570399-1');
+        </script>
           <title>Chuhan Wu - Interactive Art Portfolio</title>
           <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
           <meta name="description" content="Template by Dry Themes" />
@@ -97,13 +106,15 @@
             <div id="content" class="site-content content-1330 center-relative">
 
               <div class="page-desc">
-                <strong>Music Works</strong><br>
-                <i>  A Collection of my musical works. Software：Ableton Live </i><br>
+
+                <h1><strong>Music</strong></h1>
+               <h6>Medium: Ableton Live</h6>
+
 
               </div>
               <div class="clear"></div>
-              <p>&nbsp;</p>
-            
+
+
 
 
                 <article>
@@ -116,33 +127,19 @@
                                 </div>
     <div class="clear"></div>
                                 <div class="one_half">
-                                  <strong>Introduction:</strong><br>
-                                    <p>
-                                     “Gold Rush” is a movement of first generation of immigrated Chinese people came to San Francisco to discover gold. As the resource of gold has been fully discovered, these group of people started working for American industries to build up railways, which were the first railway of America
-                                    </p>
-                                </div>
-
-                                <div class="one_half last">
-                                    <p>&nbsp;</p>
-                                    <p> that support their future social and industrial development. Unfortunately, this group of people and their contribution were gradually forgot by this land. “Gold Rush” is for memorizing the initial generation of Chinese Immigrants who contributed to this land.               </p>
-                                </div>
-
-
-                                <div class="one_half">
                                   <strong>Script:</strong><br>
                                     <p>
                                       (rap)- My last name is Li <br>
  Not the same as Bruce lee <br>
  Ya all watch too much TV <br>
  So don’t ever call me Chinky <br>
-
  Taking the flight at PEK <br>
  I escape from the east to USA <br>
  They told me about the bloody railway <br>
  When I arrive at SF BAY <br>
-
  People forgot what we’ve done <br>
- My grandpa came before Einstein  <br>
+ My grandpa came before Einstein <br>
+
 
 
                                     </p>
@@ -150,20 +147,20 @@
 
                                 <div class="one_half last">
                                     <p>&nbsp;</p>
-                                    <p>
-                                      He never wins the Nobel Prize  <br>
-                                      But he had made sure the train can run <br>
-                                      Put my emotion in the song of hip hop <br>
-This is the century forget has no fault  <br>
-If I take over the game one day<br>
-I hope they treat me like doctor dre<br>
-
-(female singing)-When the gold already fades away <br>
-The train rolling to (the) Golden Bridge<br>
-Lord please help the eastern boy<br>
-Never cry again <br>
-             </p>
+                                    <p>  He never wins the Nobel Prize <br>
+                                     But he had made sure the train can run <br>
+                                     Put my emotion in the song of hip hop <br>
+                                     This is the century forget has no fault <br>
+                                     If I take over the game one day<br>
+                                     I hope they treat me like doctor dre<br>
+                                     (female singing)-When the gold already fades away <br>
+                                     The train rolling to (the) Golden Bridge<br>
+                                     Lord please help the eastern boy<br>
+                                     Never cry again <br>            </p>
                                 </div>
+
+
+
 
 
                                 <div class="one top-0">
